<resources>
    <string name="app_name">TO-WATCH LIST</string>
    <string name="to_watch_list">TO-WATCH LIST</string>
    <string name="authorization">Authorization</string>
    <string name="registration">Registration</string>
    <string name="login"><u>LOGIN</u></string>
    <string name="password"><u>PASSWORD</u></string>
    <string name="email"><u>EMAIL</u></string>
    <string name="mainHeader">TO-WATCH LIST</string>
    <string name="listItem">Drive</string>
    <string name="statusOn">✔</string>
    <string name="statusOff">🗙</string>
    <string name="name"><u>Name</u></string>
    <string name="release"><u>Release date</u></string>
    <string name="backBtn">Back</string>
    <string name="saveBtn">Save</string>
    <string name="amount_of_episodes">Amount of episodes</string>
    <string name="amount_of_pages">Amount of pages</string>
    <string name="repeat"><u>REPEAT PASSWORD</u></string>
    <string name="choose"><u>Choose content</u></string>

    <string-array name="day">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year">
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
    </string-array>

</resources>