<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_film"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wrap"
    android:clipToOutline="true">

    <!--Header-->
    <View
        android:id="@+id/header"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/authorization_text"
        android:layout_width="390dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="Add new series"
        android:textAppearance="@style/headerText"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="0.5" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Name-->
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/name"
                android:textAppearance="@style/formHeader" />
            <EditText
                android:id="@+id/nameInput"
                style="@style/input"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:elevation="15dp"
                android:hint="Введіть назву серіалу"
                android:inputType="text"
                android:outlineProvider="bounds"
                android:paddingStart="8dp" />

            <!--Amount of episodes-->
            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/amount_of_episodes"
                android:textAppearance="@style/formHeader" />
            <EditText
                android:id="@+id/amountNumber"
                android:ems="10"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="8dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:hint="Введіть кількість серій"
                style="@style/input"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"/>

            <!--Release date-->
            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/release"
                android:textAppearance="@style/formHeader" />
            <TextView
                android:id="@+id/additional"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="(additional)"
                android:textSize="16sp" />
            <CalendarView
                android:id="@+id/releaseDatePicker"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:background="#FFFFFF"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"/>

            <!--Save&Back-->
            <LinearLayout
                android:id="@+id/buttonsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveBtn"
                    style="@style/button"
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#98C6F0"
                    android:elevation="8dp"
                    android:shadowDy="4"
                    android:text="@string/saveBtn"
                    android:textSize="24sp"
                    app:cornerRadius="7dp"
                    app:strokeColor="#51738D"
                    app:strokeWidth="1dp" />
                <Button
                    android:id="@+id/backBtn"
                    style="@style/button"
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="#98C6F0"
                    android:elevation="8dp"
                    android:shadowDy="4"
                    android:text="@string/backBtn"
                    android:textSize="24sp"
                    app:cornerRadius="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDatePicker"
                    app:strokeColor="#51738D"
                    app:strokeWidth="1dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
