<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_film"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wrap"
    android:clipToOutline="true">

    <!--Header-->

    <View
        android:id="@+id/rectangle_header"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorization_text"
        android:layout_width="390dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="Edit series"
        android:textAppearance="@style/headerText"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rectangle_header"
        app:layout_constraintTop_toTopOf="@+id/rectangle_header"
        app:layout_constraintVertical_bias="0.5" />

    <!--Name-->
    <TextView
        android:id="@+id/name"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/name"
        android:textAppearance="@style/formHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_header" />

    <EditText
        android:id="@+id/nameInput"
        style="@style/input"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input"
        android:elevation="15dp"
        android:hint="Введіть назву фільму"
        android:inputType="text"
        android:outlineProvider="bounds"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <!--Amount of episodes-->
    <TextView
        android:id="@+id/amount"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/amount_of_episodes"
        android:textAppearance="@style/formHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />
    <EditText
        android:id="@+id/amountNumber"
        android:ems="10"
        android:inputType="number"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:outlineProvider="bounds"
        android:paddingLeft="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input"
        android:hint="Введіть кількість серій"
        style="@style/input"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="262dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount"/>

    <!--Release date-->
    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/release"
        android:textAppearance="@style/formHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountNumber" />

    <TextView
        android:id="@+id/additional"
        android:layout_width="360dp"
        android:layout_height="18dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="(additional)"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

    <CalendarView
        android:id="@+id/releaseDatePicker"
        android:layout_width="380dp"
        android:layout_height="290dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional" />

    <!--Save&Back-->
    <Button
        android:id="@+id/saveBtn"
        style="@style/button"
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="#98C6F0"
        android:elevation="8dp"
        android:shadowDy="4"
        android:text="@string/saveBtn"
        android:textSize="24sp"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDatePicker"
        app:strokeColor="#51738D"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/backBtn"
        style="@style/button"
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#98C6F0"
        android:elevation="8dp"
        android:shadowDy="4"
        android:text="@string/backBtn"
        android:textSize="24sp"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDatePicker"
        app:strokeColor="#51738D"
        app:strokeWidth="1dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
