<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wrap"
    android:clipToOutline="true">

    <View
        android:id="@+id/header"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorization_text"
        android:layout_width="390dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/registration"
        android:textAppearance="@style/headerText"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="0.5" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/login"
                android:textAppearance="@style/formHeader" />
            <EditText
                android:id="@+id/loginInput"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:elevation="15dp"
                android:hint="Введіть логін"
                android:inputType="text"
                android:outlineProvider="bounds"
                android:paddingLeft="8dp"
                style="@style/input" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/email"
                android:textAppearance="@style/formHeader" />
            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:elevation="15dp"
                android:hint="Введіть пошту"
                android:inputType="text"
                android:outlineProvider="bounds"
                android:paddingLeft="8dp"
                style="@style/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/password"
                android:textAppearance="@style/formHeader"/>
            <EditText
                android:id="@+id/passInput"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:elevation="15dp"
                android:hint="Введіть пароль"
                android:inputType="textPassword"
                android:outlineProvider="bounds"
                android:paddingLeft="8dp"
                style="@style/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/repeat"
                android:textAppearance="@style/formHeader"/>
            <EditText
                android:id="@+id/repeatPassInput"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:elevation="15dp"
                android:hint="Повторіть пароль"
                android:inputType="textPassword"
                android:outlineProvider="bounds"
                android:paddingLeft="8dp"
                style="@style/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeatPassword" />

            <Button
                android:id="@+id/submitBtn"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#98C6F0"
                android:elevation="8dp"
                android:shadowDy="4"
                android:text="Submit"
                android:textSize="24sp"
                app:cornerRadius="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeatPassInput"
                app:strokeColor="#51738D"
                app:strokeWidth="1dp" />
            <Button
                android:id="@+id/backBtn"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#98C6F0"
                android:elevation="8dp"
                android:shadowDy="4"
                android:text="Back"
                android:textSize="24sp"
                app:cornerRadius="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submitBtn"
                app:strokeColor="#51738D"
                app:strokeWidth="1dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>